Bug 359018 - Pressing cancel does not undo changes made to "Empty local wastebin..." kmail2 v 5.1.1.
Summary: Pressing cancel does not undo changes made to "Empty local wastebin..." kmail...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: config dialog (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-05 11:40 UTC by Ian
Modified: 2016-02-05 12:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian 2016-02-05 11:40:53 UTC
Set "Empty local wastebin folder on program exit" to on, 
Press "Cancel" button
Reload "Configure Kmail/Misc" and selection is still set on instead of reverting to previous setting.
Comment 1 Laurent Montel 2016-02-05 12:04:55 UTC
I confirm it.
Comment 2 Laurent Montel 2016-02-05 12:50:04 UTC
Git commit e6af484bdc1c3cc30e94fc93d8608fb1f756d710 by Montel Laurent.
Committed on 05/02/2016 at 12:49.
Pushed by mlaurent into branch 'Applications/15.12'.

Fix Bug 359018 - Pressing cancel does not undo changes made to "Empty local wastebin..." kmail2 v 5.1.1.

FIXED-IN: 5.1.2

M  +1    -0    kmail/configuredialog/configuredialog.cpp

http://commits.kde.org/kdepim/e6af484bdc1c3cc30e94fc93d8608fb1f756d710