Fix Bug 359018 - Pressing cancel does not undo changes made to "Empty local wastebin..." kmail2 v 5.1.1.

FIXED-IN: 5.1.2
BUG: 359018